@@ -227,7 +227,8 @@ const
     '{891f9e3e-0b70-49fd-a86c-53b21c6193c7},{ea24bcc3-35f5-46b9-a2a5-a12a0aed2d28},' +
     '{73188fb3-8e14-409c-95ef-ba608fdc1274},{e2c942ac-917c-4aee-a867-8f6ab960ba76},' +
     '{8f2adccc-9693-407d-9300-fccb9a12b982},{5b5da5cb-3284-45a9-a1e5-4d6b03107924},' +
-    '{cd50dce3-9a5c-4adf-b552-1741361567d6},{bd574871-5df9-4b64-83d1-2af9c0c17f66}';
+    '{cd50dce3-9a5c-4adf-b552-1741361567d6},{bd574871-5df9-4b64-83d1-2af9c0c17f66},' +
+    '{7da6a4a2-ae54-40e0-9910-ebd9ef3f017e}';
   
 var
   GOfferToInstallDotNetFxOnWinXP: Boolean;
@@ -479,7 +480,8 @@ begin
         '{afa4d1e1-ba73-4330-a6ab-e574ff39ecc3},' +             // -
         '{e2c942ac-917c-4aee-a867-8f6ab960ba76},' +             // Long Parent UNC
         '{afa4d1e1-ba73-4330-a6ab-e574ff39ecc3},' +             // -
-        '{8f2adccc-9693-407d-9300-fccb9a12b982}';               // Internet
+        '{8f2adccc-9693-407d-9300-fccb9a12b982},' +             // Internet
+        '{7da6a4a2-ae54-40e0-9910-ebd9ef3f017e}';               // Samba
     end;
     RegWriteStringValue(CSettingsRootKey, ARegKeyPath,
       'SubmenuDisplayOrder', DisplayOrder);
