@@ -50,6 +50,8 @@
 #define IDS_ANDROGYNOUS_UNC_FOLDER_PLUGIN_DESCRIPTION 144
 #define IDS_WSL_PATH_PLUGIN_DESCRIPTION 145
 #define IDS_WSL_PATH_PLUGIN_HINT        146
+#define IDS_SAMBA_PATH_PLUGIN_DESCRIPTION 147
+#define IDS_SAMBA_PATH_PLUGIN_HINT      148
 #define IDR_PATHCOPYCOPYCONTEXTMENUEXT  201
 #define IDR_PATHCOPYCOPYDATAHANDLER     202
 #define IDR_PATHCOPYCOPYCONFIGHELPER    203
