@@ -309,4 +309,10 @@ Control-click to avoid displaying an icon for this command.</value>
   <data name="WSL_PATH_PLUGIN_ID" xml:space="preserve">
     <value>{BD574871-5DF9-4B64-83D1-2AF9C0C17F66}</value>
   </data>
+  <data name="SAMBA_PATH_PLUGIN_DESCRIPTION" xml:space="preserve">
+    <value>Copy Samba Path</value>
+  </data>
+  <data name="SAMBA_PATH_PLUGIN_ID" xml:space="preserve">
+    <value>{7DA6A4A2-AE54-40E0-9910-EBD9EF3F017E}</value>
+  </data>
 </root>
